--- a/QewbeClient/QewbeClient.csproj
+++ b/QewbeClient/QewbeClient.csproj
@@ -57,6 +57,12 @@
     <Compile Include="Helpers\Serializer.cs" />
     <Compile Include="Helpers\Delegates.cs" />
     <Compile Include="Http\FileNetRequest.cs" />
+    <Compile Include="OverlayForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OverlayForm.Designer.cs">
+      <DependentUpon>OverlayForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Qewbe.cs">
       <SubType>Form</SubType>
     </Compile>
