--- a/QewbeClient/QewbeClient.csproj
+++ b/QewbeClient/QewbeClient.csproj
@@ -54,6 +54,7 @@
     <Compile Include="API\Responses.cs" />
     <Compile Include="API\UploadQueue.cs" />
     <Compile Include="Config\ConfigManager.cs" />
+    <Compile Include="Helpers\Crypto.cs" />
     <Compile Include="Helpers\Serializer.cs" />
     <Compile Include="Helpers\Delegates.cs" />
     <Compile Include="Http\FileNetRequest.cs" />
@@ -63,20 +64,15 @@
     <Compile Include="OverlayForm.Designer.cs">
       <DependentUpon>OverlayForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Qewbe.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Qewbe.Designer.cs">
-      <DependentUpon>Qewbe.cs</DependentUpon>
     </Compile>
     <Compile Include="Http\Endpoints.cs" />
     <Compile Include="Http\Client.cs" />
     <Compile Include="Http\NetRequest.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Qewbe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="API\User.cs" />
-    <EmbeddedResource Include="Qewbe.resx">
-      <DependentUpon>Qewbe.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
