--- a/QewbeClient/QewbeClient.csproj
+++ b/QewbeClient/QewbeClient.csproj
@@ -64,8 +64,11 @@
     <Compile Include="OverlayForm.Designer.cs">
       <DependentUpon>OverlayForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\LoginCreateAccount.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Controls\LoginCreateAccount.Designer.cs">
+      <DependentUpon>LoginCreateAccount.cs</DependentUpon>
     </Compile>
     <Compile Include="Http\Endpoints.cs" />
     <Compile Include="Http\Client.cs" />
@@ -73,6 +76,8 @@
     <Compile Include="Qewbe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="API\User.cs" />
+    <EmbeddedResource Include="Controls\LoginCreateAccount.resx">
+      <DependentUpon>LoginCreateAccount.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
