--- a/QewbeClient/QewbeClient.csproj
+++ b/QewbeClient/QewbeClient.csproj
@@ -54,6 +54,12 @@
     <Compile Include="API\Responses.cs" />
     <Compile Include="API\UploadQueue.cs" />
     <Compile Include="Config\ConfigManager.cs" />
+    <Compile Include="Controls\LoginCreateAccountForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Controls\LoginCreateAccountForm.Designer.cs">
+      <DependentUpon>LoginCreateAccountForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Helpers\Crypto.cs" />
     <Compile Include="Helpers\Serializer.cs" />
     <Compile Include="Helpers\Delegates.cs" />
@@ -64,11 +70,8 @@
     <Compile Include="OverlayForm.Designer.cs">
       <DependentUpon>OverlayForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Controls\LoginCreateAccount.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Controls\LoginCreateAccount.Designer.cs">
-      <DependentUpon>LoginCreateAccount.cs</DependentUpon>
     </Compile>
     <Compile Include="Http\Endpoints.cs" />
     <Compile Include="Http\Client.cs" />
@@ -76,8 +79,8 @@
     <Compile Include="Qewbe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="API\User.cs" />
-    <EmbeddedResource Include="Controls\LoginCreateAccount.resx">
-      <DependentUpon>LoginCreateAccount.cs</DependentUpon>
+    <EmbeddedResource Include="Controls\LoginCreateAccountForm.resx">
+      <DependentUpon>LoginCreateAccountForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
